<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="374dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <TextView
            android:id="@+id/y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/y" />

        <TextView
            android:id="@+id/z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/z" />

        <TextView
            android:id="@+id/acc_body_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_body_x" />

        <TextView
            android:id="@+id/acc_body_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_body_y" />

        <TextView
            android:id="@+id/acc_body_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_body_z" />

        <TextView
            android:id="@+id/gyro_body_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyro_body_x" />

        <TextView
            android:id="@+id/gyro_body_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyro_body_y" />

        <TextView
            android:id="@+id/gyro_body_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyro_body_z" />

        <TextView
            android:id="@+id/walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walking" />

        <TextView
            android:id="@+id/walking_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walking_upstairs" />

        <TextView
            android:id="@+id/walking_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walking_downstairs" />

        <TextView
            android:id="@+id/sitting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sitting" />

        <TextView
            android:id="@+id/standing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standing" />

        <TextView
            android:id="@+id/laying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laying" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>